tests/snapshots/motion_bounds_test__e_at_eof.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:5
Lines: 2

Buffer:
line 1
line [2]
