tests/snapshots/motion_bounds_test__gg_already_at_top.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 2

Buffer:
[l]ine 1
line 2
