tests/snapshots/motion_bounds_test__j_at_last_line.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:0
Lines: 3

Buffer:
line 1
line 2
[l]ine 3
