tests/snapshots/motion_bounds_test__j_single_line.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 0:0
Lines: 1

Buffer:
[o]nly line
