tests/snapshots/motion_bounds_test__j_with_count_beyond.snap
---
source: tests/motion_bounds_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 1:0
Lines: 3

Buffer:
line 1
[l]ine 2
line 3
